# x-search

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
feature_specs/: 001_chrome_extension.md
src/chrome_extension/: .gitignore  FEATURE_SPEC.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  background.js  content.js  jest.config.js  manifest.json  options.html  options.js  package-lock.json  package.json  popup.css  popup.html  popup.js  utils.js
src/chrome_extension/__tests__/: README.md  helpers.js  setup.js
src/chrome_extension/__tests__/unit/: content.test.js  utils.test.js
src/chrome_extension/icons/: README.md
src/chrome_extension/test_backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  server.js
src/config/: settings.py
src/database/: connection.py  migrate.py
src/ingestion/: import_likes.py  link_scraper.py
src/processing/: batch_processor.py  embedder.py
src/retrieval/: rag_pipeline.py  vector_store.py
src/services/tweet_capture/: .dockerignore  .env.example  Dockerfile  FEATURE_SPEC.md  NEXT_STEPS.md  README.md  requirements.txt
src/services/tweet_capture/app/: config.py  dependencies.py  main.py
src/services/tweet_capture/app/models/: auth.py  tweet.py
src/services/tweet_capture/terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/services/tweet_capture/tests/: test_jwt_utils.py  test_models.py  test_password_utils.py
src/services/tweet_capture/workers/: retry_publisher.py
src/ui/: app.py
src/utils/: logger.py
(+9 files in other folders)
